workspace/log/build_2023-11-04_19-47-26/template_drone_control/stdout_stderr.log
[35m[1mScanning dependencies of target template_drone_control_node[0m
[ 50%] [32mBuilding CXX object CMakeFiles/template_drone_control_node.dir/src/template_drone_control_node.cpp.o[0m
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp: In member function ‘void TemplateDroneControl::create_points()’:
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:444:66: error: expected ‘;’ before ‘list_of_points’
  444 |         list_of_points.push_back({13.599, 2.49, 1.0, "", "soft"})
      |                                                                  ^
      |                                                                  ;
  445 |         list_of_points.push_back({12.599, 2.49, 1.0, "", "soft"})
      |         ~~~~~~~~~~~~~~                                            
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:445:65: error: expected primary-expression before ‘)’ token
  445 |         list_of_points.push_back({12.599, 2.49, 1.0, "", "soft"})
      |                                                                 ^
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:446:65: error: expected primary-expression before ‘)’ token
  446 |         list_of_points.push_back({12.599, 1.49, 1.0, "", "soft"})
      |                                                                 ^
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:447:69: error: expected primary-expression before ‘)’ token
  447 |         list_of_points.push_back({13.599, 1.49, 1.0, "land", "soft"})
      |                                                                     ^
make[2]: *** [CMakeFiles/template_drone_control_node.dir/build.make:63: CMakeFiles/template_drone_control_node.dir/src/template_drone_control_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:105: CMakeFiles/template_drone_control_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
